--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
